# Teacher_LLM

./: .dockerignore  .replit  ADMIN_GUIDE.md  ALTERNATIVE_TUNNELS.md  COPY_TO_SERVER.md  DEVELOPMENT_STATUS.md  DOCKER_DEPLOYMENT.md  Dockerfile  FASTAPI_DEPLOYMENT_UPDATE.md  FINAL_FIX.md  FINAL_SETUP.md  FIX_NGROK_CONNECTION.md  FIX_SSH_TUNNEL.md  GOOGLE_AUTH_SETUP.md  PAYMENT_INTEGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_DEPLOYMENT.md  QUICK_FIX.md  QUICK_START.md  README.md  SETUP_TELEGRAM_SIMPLE.md  SIMPLE_SOLUTION.md  TELEGRAM_INTEGRATION.md  TELEGRAM_LOCALHOST_RUN.md  TELEGRAM_MINIAPP_SETUP.md  TELEGRAM_SETUP.md  TROUBLESHOOTING.md  WORKING_WITHOUT_TUNNEL.md  YANDEX_METRICA_GUIDE.md  admin_fastapi.py  admin_flask_OLD.py  app_streamlit_OLD.py  config.yaml  config_loader.py  cookies.txt  create_tunnel.py  debug_database.py  debug_progress.py  deploy.sh  docker-compose.yml  (+31 more)
data/: modules.json  questions.json  questions_ru.json  screening_test_questions.json
logs/: telegram_app.log.1
pages/: progress_dashboard.py  skill_assessment.py
templates/: admin_add_image_question.html  admin_add_question.html  admin_add_subcategory_question.html  admin_add_submodule_question.html  admin_category.html  admin_dashboard.html  admin_database.html  admin_login.html  admin_modules.html  admin_new_question.html  admin_question.html  admin_subcategories.html  admin_table_data.html  index.html
utils/: database.py  db_progress_tracker.py  progress_tracker.py  yandex_gpt_helper.py
